linked the logo name to the index page in  each page

--- a/html/catering.html
+++ b/html/catering.html
@@ -11,22 +11,22 @@
     <title>Catering</title>
 </head>
 <body>
-    <article class="site-navigation">
-        <header>
-          <a href="#" class="logo">Fannie Bays</a>
-          <div class="navigation-toggle"></div>
-          <nav class="sitenavigation">
-            <ul>
-              <li><a href="../index.html">Home</a></li>
-              <li><a href="../html/onlineorder.html">Order Online</a></li>
-              <li><a href="../html/reservations.html">Booking Reservation</a></li>
-              <li><a href="../html/catering.html">Catering</a></li>
-              <li><a href="../index.html">More Options</a></li>
-            </ul>
-          </nav>
-          <div class="clearfix"></div>
-        </header>
-    </article>
+  <article class="site-navigation">
+      <header>
+        <a href="../index.html" class="logo">Fannie Bays</a>
+        <div class="navigation-toggle"></div>
+        <nav class="sitenavigation">
+          <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../html/onlineorder.html">Order Online</a></li>
+            <li><a href="../html/reservations.html">Booking Reservation</a></li>
+            <li><a href="../html/catering.html">Catering</a></li>
+            <li><a href="../index.html">More Options</a></li>
+          </ul>
+        </nav>
+        <div class="clearfix"></div>
+      </header>
+  </article>
     <div class="intro_slider">
         <div class="hero_slider">
             <div>
