--- a/html/onlineorder.html
+++ b/html/onlineorder.html
@@ -11,7 +11,7 @@
     <body>
       <article class="site-navigation">
         <header>
-          <a href="#" class="logo">Fannie Bays</a>
+          <a href="../index.html" class="logo">Fannie Bays</a>
           <div class="navigation-toggle"></div>
           <nav class="sitenavigation">
             <ul>
