-Created CSS and HTML for the online reservations page -Added icons in the page to make it more appealing

--- a/html/reservations.html
+++ b/html/reservations.html
@@ -44,24 +44,46 @@
         <div class="slider_shade">
         </div>
     </div>
-    <div class="unique_content">
+    </div>
+    <div class="unique_content reservation">
         <h2>Book a Table</h2>
-        <div class="booking_table">
-            <figure class="booking_table">
+        <div class="booking">
+
+            <div class="booking_form">
+                <form class="booking_form" action="">
+                    <input type="text" class="form_element" placeholder="Full Name"><br>
+                    <input type="text" class="form_element" placeholder="Mobile Number"><br>
+                    <input type="text" class="form_element" placeholder="E-Mail"><br>
+                    <input type="text" class="form_element" placeholder="Number of Guests"><br>
+                    <input type="submit" class="button1">
+                </form>
+            </div>
+
+            <div class="booking_description">
+                <h3>As easy as that</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum provident voluptatibus nam, praesentium, quis excepturi accusamus, dolorum modi ipsum laborum minima in ad. Ullam temporibus distinctio, earum labore debitis doloribus?</p>
+            </div>
+
+        </div>
+        
+        <div class="booking_process">
+            <figure class="booking_process">
                 <img src="../images/reservations/booking.svg" alt=""><br>
                 <h3>Book</h3>
             </figure>
-            <figure class="booking_table">
+            <figure class="booking_process">
                 <img src="../images/reservations/front-desk.svg" alt=""><br>
                 <h3>Confirm</h3>
             </figure>
-            <figure class="booking_table">
+            <figure class="booking_process">
                 <img src="../images/reservations/meal.svg" alt=""><br>
                 <h3>Eat</h3>
             </figure>
         </div>
+
     </div>
-    <div>Icons made by <a href="https://www.flaticon.com/authors/iconixar" title="iconixar">iconixar</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+
+    
     <footer class = "container">
         <ul class = "dec">
             <li class="footeritem"><a href="https://www.facebook.com/fanniebaysuperpizza/" class="footericon"><i class = "fab fa-facebook-f"></i></a></li>
