-Added form validation in the payment options using jQuery and RegEx. -All the invalid entries in the form changes their css. -Updated CSS to make the payment form look more attractive.

--- a/html/onlineorder.html
+++ b/html/onlineorder.html
@@ -419,14 +419,11 @@
                 <input type="text" id="cc_name" class="form_element cc_elements" placeholder="Full Name" required><br>
                 <input type="text" id="cc_email" email class="form_element cc_elements" placeholder="E-Mail" required><br>
                 <input type="text" id="cc_phone" class="form_element cc_elements" placeholder="Phone Number" required><br>
+                
+                <input type="text" id="card_number" class="form_element cc_elements card_number" placeholder="XXXXXXXXXXXXXXXX"><br>
 
-                <input type="text" id="card_number" class="form_element cc_elements card_number" placeholder="XXXX">
-                <input type="text" id="card_number" class="form_element cc_elements card_number" placeholder="XXXX">
-                <input type="text" id="card_number" class="form_element cc_elements card_number" placeholder="XXXX">
-                <input type="text" id="card_number" class="form_element cc_elements card_number" placeholder="XXXX"><br>
-
-                <input type="text" id="cvv" class="form_element cc_elements card_number" id="securitycode" placeholder="123"><br>
-                <input type="text" id="exp_date" class="cc_elements form_element card_number" placeholder="MM/YY"><br>
+                <input type="text" id="cvv" class="form_element cc_elements cvv" id="securitycode" placeholder="123"><br>
+                <input type="text" id="exp_date" class="cc_elements form_element exp_date" placeholder="MM/YY"><br>
             </form>
 
         </article>
