Edited the styles of form from reservations page format to make the styels consistant. Deletd an unnceccary image.

--- a/html/catering.html
+++ b/html/catering.html
@@ -72,8 +72,9 @@
             <div class="booking_description">
                 <h3>Enjoy the Event, Leave the Food to Us !</h3>
                 <p>From salads and side platters, to Pasta – and of course pizza with authentic Italian flavour!
-                  – we can create a specially designed menu for any type of event. To view our menu please <a href="../html/onlineorder.html">CLICK HERE</a>. Don’t let that growing “to do”
-                  list overwhelm you – cross off food and refreshments by sending us details of your event !!
+                  – we can create a specially designed menu for any type of event. Don’t let that growing “to do”
+                  list overwhelm you – cross off food and refreshments by sending us details of your event !!<br>
+                  To view our Menu please <a href="../html/onlineorder.html">CLICK HERE</a>.
                 </p>
             </div>
 
