--- a/html/onlineorder.html
+++ b/html/onlineorder.html
@@ -6,7 +6,10 @@
         <title>Online Order</title>
         <meta name="viewport" content="width=device-width initial-scale = 1">
         <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="../scripts/jquery-ui/jquery-ui.css">
+        <link rel="stylesheet" href="../scripts/jquery-ui/jquery-ui.theme.css">
+        <link rel="stylesheet" href="../scripts/jquery-ui/jquery-ui.structure.css">
+
     </head>
     <body>
       <article class="site-navigation">
@@ -469,7 +472,11 @@
     </body>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script src="../scripts/jquery-ui/jquery-ui.js" type="text/javascript"></script>
     <script type="text/javascript" src="../scripts/Kanish_jQuery_script.js"></script>
     <script src="../scripts/online_ordering_and_main_navigation.js" type="text/javascript"></script>
+    <script>
+      
+    </script>
 
 </html>
