changed the catering hero slider image and edited the content of catering page

--- a/html/catering.html
+++ b/html/catering.html
@@ -30,7 +30,7 @@
     <div class="intro_slider">
         <div class="hero_slider">
             <div>
-                <h1>Get a free Italian Catering Quote for your next event !!</h1>
+                <h1>Get a free Italian Catering Quote for your next event</h1>
                 <p>
                   Whether you’re hosting a small family gathering or planning a large corporate function,
                     we’ve got you covered. Contact Us today to inquire about hosting your event with us.
@@ -45,7 +45,7 @@
                 </p>
             </div>
         </div>
-        <img src="../images/hero_slider/homepage.jpg">
+        <img src="../images/hero_slider/catering.jpg">
         <div class="slider_shade">
         </div>
     </div>
@@ -70,10 +70,10 @@
             </div>
 
             <div class="booking_description">
-                <h3>Enjoy the Event, Leave the Food to Us !</h3>
+                <h3>Enjoy the Event, Leave the Food to Us</h3>
                 <p>From salads and side platters, to Pasta – and of course pizza with authentic Italian flavour!
                   – we can create a specially designed menu for any type of event. Don’t let that growing “to do”
-                  list overwhelm you – cross off food and refreshments by sending us details of your event !!<br>
+                  list overwhelm you – cross off food and refreshments by sending us details of your event.<br>
                   To view our Menu please <a href="../html/onlineorder.html">CLICK HERE</a>.
                 </p>
             </div>
