--- a/html/MoreOptions.html
+++ b/html/MoreOptions.html
@@ -21,7 +21,7 @@
                 <li><a href="../html/onlineorder.html">Order Online</a></li>
                 <li><a href="../html/reservations.html">Booking Reservation</a></li>
                 <li><a href="../html/catering.html">Catering</a></li>
-                <li><a href="../index.html">More Options</a></li>
+                <li><a href="../html/MoreOptions.html">More Options</a></li>
             </ul>
         </nav>
         <div class="clearfix"></div>
@@ -45,8 +45,8 @@
     </div>
     <div class="page_paragraph">
         <div>
-            <h2>Gets you in</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, modi voluptatem dolor similique veritatis eaque minus officia quasi maxime quas pariatur illum dolorem excepturi iure provident blanditiis nisi delectus sapiente!</p>
+            <h2>Find Us on the Map</h2>
+            <br><br><p>Fannie bay super pizza is a local Italian pizza. It located at <a href="location.html" class ="desc2"> Darwin</a>. Find us ASAP</p>
         </div>
     </div>
     <img src="../images/hero_slider/reservation.jpg">
