Creating media gallery

--- a/html/MoreOptions.html
+++ b/html/MoreOptions.html
@@ -50,17 +50,33 @@
         </div>
     </div>
     <img src="../images/hero_slider/reservation.jpg">
-    <div class="slider_shade">
-    </div>
-</div>
+    <div class="slider_shade"></div>
 </div>
 
+<div class="unique_content">
+    <section>
+        <h2>Gallery</h2>
+        <div class="gallery">
+            <a href="onlineorder.html"  ><img src="../images/More_Option/pizza1.jpg " ></a>
+            <div class ="desc" >Vegetable Pizza </div>
+        </div>
+        <div class="gallery">
+            <a href="onlineorder.html"><img src="../images/More_Option/pizza2.png "></a>
+            <div class ="desc" >Economic Lunch</div>
 
+        </div>
+        <div class="gallery">
+            <a href="onlineorder"><img src="../images/More_Option/meal3.png "></a>
+            <div class ="desc" >Rice Meal </div>
+        </div>
+        <div class="gallery">
+            <a href="onlineorder.html"><img src="../images/More_Option/pasta4.png "></a>
+            <div class ="desc" >Spaghetti</div>
+        </div>
 
-
-
+    </section>
 </div>
-
+</div>
 
 <footer class = "container">
     <ul class = "dec">
