added more option page link to nav bar in 4 pages

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <li><a href="html/onlineorder.html">Order Online</a></li>
               <li><a href="html/reservations.html">Booking Reservation</a></li>
               <li><a href="html/catering.html">Catering</a></li>
-              <li><a href="index.html">More Options</a></li>
+              <li><a href="html/MoreOptions.html">More Options</a></li>
             </ul>
           </nav>
           <div class="clearfix"></div>
