--- a/html/reservations.html
+++ b/html/reservations.html
@@ -21,7 +21,7 @@
               <li><a href="../html/onlineorder.html">Order Online</a></li>
               <li><a href="../html/reservations.html">Booking Reservation</a></li>
               <li><a href="../html/catering.html">Catering</a></li>
-              <li><a href="../index.html">More Options</a></li>
+              <li><a href="../html/MoreOptions.html">More Options</a></li>
             </ul>
           </nav>
           <div class="clearfix"></div>
@@ -72,7 +72,7 @@
             </div>
 
         </div>
-        
+
         <div class="booking_process">
             <figure class="booking_process">
                 <img src="../images/reservations/booking.svg" alt=""><br>
@@ -90,7 +90,7 @@
 
     </div>
 
-    
+
     <footer class = "container">
         <ul class = "dec">
             <li class="footeritem"><a href="https://www.facebook.com/fanniebaysuperpizza/" class="footericon"><i class = "fab fa-facebook-f"></i></a></li>
