Fixing the footer positions and change the gallery scale

--- a/html/MoreOptions.html
+++ b/html/MoreOptions.html
@@ -46,7 +46,7 @@
     <div class="page_paragraph">
         <div>
             <h2>Find Us on the Map</h2>
-            <br><br><p>Fannie bay super pizza is a local Italian pizza. It located at <a href="location.html" class ="desc2"> Darwin</a>. Find us ASAP</p>
+            <br><br><p>Fannie bay super pizza is a local Italian pizza. Find us at <a href="location.html" class ="desc2"> Darwin</a></p>
         </div>
     </div>
     <img src="../images/hero_slider/reservation.jpg">
