Linking  google map and making order schedule

--- a/html/location.html
+++ b/html/location.html
@@ -53,6 +53,7 @@
             flavours  of Italy. Select from a wide range of options available on our menu, including enticing entrees, magnificent mains and
             delicious desserts that will tantalise your taste buds and leave you wanting to visit again and again.
             </p>
+
         </div>
     </div>
     <img src="../images/hero_slider/reservation.jpg">
@@ -60,25 +61,28 @@
 </div>
 
 <div class="unique_content">
-    <section>
-        <h2>Gallery</h2>
-        <div class="gallery">
-            <a href="onlineorder.html"  ><img src="../images/More_Option/pizza1.jpg " ></a>
-            <div class ="desc" >Vegetable Pizza </div>
-        </div>
-        <div class="gallery">
-            <a href="onlineorder.html"><img src="../images/More_Option/pizza2.png "></a>
-            <div class ="desc" >Economic Lunch</div>
+    <section class ="rate">
 
+        <div id="map">
+
+            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3896.3846519951107!2d130.83430341545525!3d-12.42407199121673!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2cc09234a7b8d23d%3A0x31f093bc9b9abffb!2sFannie%20Bay%20Super%20Pizza%20Italian%20Restaurant!5e0!3m2!1sen!2sau!4v1590477823391!5m2!1sen!2sau" width="850" height="680" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+
+            <p>
+            <p class="desc2">Schedule</p><br>
+            <p class="schedule"> Monday &nbsp;&nbsp;5:00pm - late </p><br>
+            <p class="schedule"> Tuesday&nbsp;&nbsp; 5:00pm - late </p><br>
+            <p class="schedule"> Wednesday &nbsp;&nbsp;5:00pm - late </p><br>
+            <p class="schedule"> Thursday &nbsp;&nbsp;5:00pm - late </p><br>
+            <p class="schedule"> Friday &nbsp;&nbsp; 5:00pm - late </p><br>
+            <p class="schedule"> Saturday&nbsp;&nbsp; 5:00pm - late </p><br>
+            <p class="schedule"> Sunday &nbsp;&nbsp;5:00pm - late </p><br>
+            <p class="schedule"> Last Orders at 9pm </p><br>
         </div>
-        <div class="gallery">
-            <a href="onlineorder"><img src="../images/More_Option/meal3.png "></a>
-            <div class ="desc" >Rice Meal </div>
-        </div>
-        <div class="gallery">
-            <a href="onlineorder.html"><img src="../images/More_Option/pasta4.png "></a>
-            <div class ="desc" >Spaghetti</div>
-        </div>
+
+        <p class="desc2 ">Contact Us</p>
+        <p class="schedule"> Telephon: &nbsp;&nbsp;(08) 8981 7324 </p><br>
+        <p class="schedule"> Address: &nbsp;&nbsp;4 Keith Ln, Fannie Bay NT 0820 </p><br>
+
 
     </section>
 </div>
