--- a/html/location.html
+++ b/html/location.html
@@ -65,7 +65,8 @@
 
         <div id="map">
 
-            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3896.3846519951107!2d130.83430341545525!3d-12.42407199121673!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2cc09234a7b8d23d%3A0x31f093bc9b9abffb!2sFannie%20Bay%20Super%20Pizza%20Italian%20Restaurant!5e0!3m2!1sen!2sau!4v1590477823391!5m2!1sen!2sau" width="850" height="680" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            <iframe class="map"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3896.3846519951107!2d130.83430341545525!3d-12.42407199121673!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2cc09234a7b8d23d%3A0x31f093bc9b9abffb!2sFannie%20Bay%20Super%20Pizza%20Italian%20Restaurant!5e0!3m2!1sen!2sau!4v1590477823391!5m2!1sen!2sau" width="900" height="750" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 
             <p>
             <p class="desc2">Schedule</p><br>
