--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="intro_slider">
         <div class="hero_slider">
             <div>
-                <h1>Welcome to Fannie Bay Super Pizza & Italian Restaurant!</h1>
+                <h1>Welcome to Fannie Bay Super Pizza & Italian Restaurant</h1>
             </div>
         </div>
         <div class="page_paragraph">
