added meaningfull content to the book reservations page

--- a/html/reservations.html
+++ b/html/reservations.html
@@ -31,13 +31,14 @@
         <div class="hero_slider">
             <div>
                 <h1>Online Reservation</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum animi quasi odio, quis similique quia explicabo atque unde mollitia, voluptate, ullam officia aut cum odit nam dolorem error at beatae!</p>
+                <p>Enjoy our fine dining environment</p>
             </div>
         </div>
         <div class="page_paragraph">
             <div>
                 <h2>Gets you in</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, modi voluptatem dolor similique veritatis eaque minus officia quasi maxime quas pariatur illum dolorem excepturi iure provident blanditiis nisi delectus sapiente!</p>
+                <p>Book a table and Dine with us. Enjoy the authentic
+                  italian cuisine with a great variety of different indregients..</p>
             </div>
         </div>
         <img src="../images/hero_slider/reservation.jpg">
@@ -68,7 +69,8 @@
 
             <div class="booking_description">
                 <h3>As easy as that</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum provident voluptatibus nam, praesentium, quis excepturi accusamus, dolorum modi ipsum laborum minima in ad. Ullam temporibus distinctio, earum labore debitis doloribus?</p>
+                <p>Let us know when you would like to book a reservation and one of the
+                Fannie Bay staff will contact you within 30 minutes to confirm or find another tim. </p>
             </div>
 
         </div>
