--- a/html/MoreOptions.html
+++ b/html/MoreOptions.html
@@ -8,6 +8,7 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <meta content="width=device-width,user-scalable=no" name="viewport">
     <title>Online Reservation</title>
 </head>
 <body>
