Created new format to the unique items in the locationsa dnmore options pages and added new styles to make them responsive.

--- a/html/MoreOptions.html
+++ b/html/MoreOptions.html
@@ -31,14 +31,11 @@
 <div class="intro_slider">
     <div class="hero_slider">
         <div>
-            <h1>Gallery Media </h1>
-            <p class="gal" >Having served up what is locally known as the best pizza in Darwin for over 30 years,
-                Fannie Bay Super Pizza Italian Restaurant is determined to smash your expectations for authentic Italian cuisine.
+            <h1>Media Gallery</h1>
+            <p>
+                We are determined to smash your expectations for authentic Italian cuisine.
                 Love pasta? Look no further, as chefs Manuela and Luigi hand make all the pasta and sauces from scratch!
-                <br><br>From creamy gnocchi and stuffed pumpkin cannelloni (a vegetarian showstopper), to tagliatelle marinara (seafood heaven)
-                and spaghetti gamberetti (zucchini noodles) these fresh dishes bursting with flavour will have you salivating at first sight.
-
-                <br><br>As well as great pizza and pasta, they also offer a selection of traditional mains, like grilled barramundi with Marion sauce,
+                <br><br>We also offer a selection of traditional mains, like grilled barramundi with Marion sauce,
                 spicy Sicilian prawns and juicy ribeye steak. Don’t miss out on the rich flavours and rustic environment at Fannie Bay Super Pizza Italian Restaurant in Darwin!
                 <br><br>Research our gallery and find out your favourite food.
             </p>
@@ -46,38 +43,39 @@
     </div>
     <div class="page_paragraph">
         <div>
-            <h2>Find Us on the Map</h2>
-            <br><br><p>Fannie bay super pizza is a local Italian pizza. Find us at <a href="location.html" class ="desc2"> Darwin</a></p>
+            <h2><a href="location.html">CLICK HERE</a> to find Us on the Map. </h2>
         </div>
     </div>
-    <img src="../images/hero_slider/reservation.jpg">
+    <img src="../images/hero_slider/moreoptions.jpg">
     <div class="slider_shade"></div>
 </div>
 
-<div class="unique_content">
-    <section>
-        <h2>Gallery</h2>
-        <div class="gallery">
-            <a href="onlineorder.html"  ><img src="../images/More_Option/pizza1.jpg " ></a>
-            <div class ="desc" >Vegetable Pizza </div>
-        </div>
-        <div class="gallery">
-            <a href="onlineorder.html"><img src="../images/More_Option/pizza2.png "></a>
-            <div class ="desc" >Economic Lunch</div>
+<div class="home_unique_content">
+    <h2>Gallery</h2>
 
-        </div>
-        <div class="gallery">
-            <a href="onlineorder"><img src="../images/More_Option/meal3.png "></a>
-            <div class ="desc" >Rice Meal </div>
-        </div>
-        <div class="gallery">
-            <a href="onlineorder.html"><img src="../images/More_Option/pasta4.png "></a>
-            <div class ="desc" >Spaghetti</div>
-        </div>
+    <div class="dealcardItems">
 
-    </section>
-</div>
-</div>
+      <div class="dealcard">
+        <a href="onlineorder.html"  ><img src="../images/More_Option/pizza1.jpg " class="dealcardImage dealcardItem"></a>
+        <h3>Vegetable Pizza</h3>
+      </div>
+
+      <div class="dealcard">
+        <a href="onlineorder.html"  ><img src="../images/More_Option/pizza2.png " class="dealcardImage dealcardItem"></a>
+        <h3>Economic Lunch</h3>
+      </div>
+
+      <div class="dealcard">
+        <a href="onlineorder.html"  ><img src="../images/More_Option/meal3.png " class="dealcardImage dealcardItem"></a>
+        <h3>Rice Meal</h3>
+      </div>
+
+      <div class="dealcard">
+        <a href="onlineorder.html"  ><img src="../images/More_Option/pasta4.png " class="dealcardImage dealcardItem"></a>
+        <h3>Spaghetti</h3>
+      </div>
+
+    </div>
 
 <footer class = "container">
     <ul class = "dec">
@@ -85,8 +83,7 @@
         <li class="footeritem"><a href ="https://www.instagram.com/" class="footericon"><i class = "fab fa-instagram"></i></a></li>
         <li class="footeritem"><a href = "https://www.google.com.au/" class="footericon"><i class = "fab fa-google"></i></a></li>
         <li class="footeritem"><a href = "https://www.youtube.com/" class="footericon"><i class = "fab fa-youtube"></i></a></li>
-        <li  class="footeritem"><a href = "https://fanniebaysuperpizza.com/"></a><i
-                class ="fas fa-envelope"></i></a></li>
+        <li  class="footeritem"><a href = "https://fanniebaysuperpizza.com/"></a><i class ="fas fa-envelope"></i></a></li>
 
 
     </ul>
