--- a/html/reservations.html
+++ b/html/reservations.html
@@ -94,13 +94,12 @@
 
 
     <footer class = "container">
-        <ul class = "dec">
+        <ul class = "footer1">
             <li class="footeritem"><a href="https://www.facebook.com/fanniebaysuperpizza/" class="footericon"><i class = "fab fa-facebook-f"></i></a></li>
             <li class="footeritem"><a href ="https://www.instagram.com/" class="footericon"><i class = "fab fa-instagram"></i></a></li>
             <li class="footeritem"><a href = "https://www.google.com.au/" class="footericon"><i class = "fab fa-google"></i></a></li>
             <li class="footeritem"><a href = "https://www.youtube.com/" class="footericon"><i class = "fab fa-youtube"></i></a></li>
-            <li  class="footeritem"><a href = "https://fanniebaysuperpizza.com/"></a><i
-                class ="fas fa-envelope"></i></a></li>
+            <li  class="footeritem"><a href = "https://fanniebaysuperpizza.com/"></a><i class ="fas fa-envelope"></i></a></li>
 
 
         </ul>
