--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
             <li class="footeritem"><a href ="https://www.instagram.com/" class="footericon"><i class = "fab fa-instagram"></i></a></li>
             <li class="footeritem"><a href = "https://www.google.com.au/" class="footericon"><i class = "fab fa-google"></i></a></li>
             <li class="footeritem"><a href = "https://www.youtube.com/" class="footericon"><i class = "fab fa-youtube"></i></a></li>
-            <li  class="footeritem"><a href = "https://fanniebaysuperpizza.com/"></a><i
-                class ="fas fa-envelope"></i></a></li>
+            <li  class="footeritem"><a href = "https://fanniebaysuperpizza.com/"></a><i class ="fas fa-envelope"></i></a></li>
 
 
         </ul>
