--- a/html/reservations.html
+++ b/html/reservations.html
@@ -94,7 +94,7 @@
 
 
     <footer class = "container">
-        <ul class = "footer1">
+        <ul class = "dec">
             <li class="footeritem"><a href="https://www.facebook.com/fanniebaysuperpizza/" class="footericon"><i class = "fab fa-facebook-f"></i></a></li>
             <li class="footeritem"><a href ="https://www.instagram.com/" class="footericon"><i class = "fab fa-instagram"></i></a></li>
             <li class="footeritem"><a href = "https://www.google.com.au/" class="footericon"><i class = "fab fa-google"></i></a></li>
