-Added page content to the online reservations page - Altered form validation in the reservations page, there were some errors in the last page

--- a/html/reservations.html
+++ b/html/reservations.html
@@ -31,13 +31,13 @@
         <div class="hero_slider">
             <div>
                 <h1>Online Reservation</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum animi quasi odio, quis similique quia explicabo atque unde mollitia, voluptate, ullam officia aut cum odit nam dolorem error at beatae!</p>
+                <p>Celebrating an anniversary? Organizing a surprise birthday dinner? Do not forget to pre-book and reserve your table online to help us serve you better!</p>
             </div>
         </div>
         <div class="page_paragraph">
             <div>
                 <h2>Gets you in</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, modi voluptatem dolor similique veritatis eaque minus officia quasi maxime quas pariatur illum dolorem excepturi iure provident blanditiis nisi delectus sapiente!</p>
+                <p>After showing us your pre-booked reservation, you’ll be immediately escorted to your table. We highly advise you to make a reservation especially on busy days as we might not be able to accommodate you without one.</p>
             </div>
         </div>
         <img src="../images/hero_slider/reservation.jpg">
@@ -68,7 +68,7 @@
 
             <div class="booking_description">
                 <h3>As easy as that</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum provident voluptatibus nam, praesentium, quis excepturi accusamus, dolorum modi ipsum laborum minima in ad. Ullam temporibus distinctio, earum labore debitis doloribus?</p>
+                <p>It’s really simple to make a reservation. Fill in the details in the form, and someone from our restaurant will call you to make confirmations. You can also make special requests regarding the food and we shall try our best to accommodate. Minimum notice to reserve a table : 8 hours</p>
             </div>
 
         </div>
